--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,16 @@
+@import 'abstracts/functions';
+@import 'abstracts/mixins';
+@import 'abstracts/variables';
+
+@import 'base/animations';
 @import 'base/base';
+@import 'base/typography';
+@import 'base/utilities';
+
+@import 'components/btn';
+
+@import 'layout/grid';
+@import 'layout/header';
+
+
+
