--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,9 +8,12 @@
 @import 'base/utilities';
 
 @import 'components/btn';
+@import 'components/features';
 
 @import 'layout/grid';
 @import 'layout/header';
+@import 'layout/section-about';
+
 
 
 
