--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,4 +1,5 @@
 :root {
     --color-primary: #54d154;
-    --color-dark: ##1f1f1f;
+    --color-primary-hover: #48b148;
+    --color-dark: #1f1f1f;
 }
