--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -18,7 +18,19 @@
         font-size: 2.2rem;
         padding: .7rem 3.5rem;
         border-radius: 10rem;
-        margin-bottom: 20rem;
+        margin-bottom: 30rem;
+        transition: transform .2s;
+
+        &:hover,
+        &:focus {
+            outline: none;
+            transform: translateY(-.2rem);
+            background-color: var(--color-primary-hover);
+        }
+
+        &:active {
+            transform: translateY(.2rem);
+        }
     }
 
     &--grey {
@@ -31,6 +43,17 @@
         border-radius: 3rem;
         margin-bottom: 1rem;
 
+        &:hover,
+        &:focus {
+            outline: none;
+            transform: translateY(-.2rem);
+            background-color: rgba(255, 255, 255, .8);
+        }
+
+        &:active {
+            transform: translateY(.2rem);
+        }
+
         &::after {
             @include pseudo;
             background-image: url(../img/shape-1.png);
@@ -39,6 +62,27 @@
             height: 1.4rem;
             right: 1rem;
             top: 1rem;
+        }
+    }
+
+    &--sm {
+        background-color: var(--color-primary);
+        padding: .7rem 1.8rem;
+        border-radius: 3rem;
+        font-family: 'Proxima Nova Rg';
+        @include font-weight(bold);
+        font-size: 1.6rem;
+        color: #fff;
+
+        &:hover,
+        &:focus {
+            outline: none;
+            transform: translateY(-.2rem);
+            background-color: var(--color-primary-hover);
+        }
+
+        &:active {
+            transform: translateY(.2rem);
         }
     }
 }
