--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,27 @@
 :root {
   --color-primary: #54d154;
   --color-primary-hover: #48b148;
+  --color-dark-green: #207b20;
+  --color-grey: #828181;
   --color-dark: #1f1f1f; }
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); }
+  80% {
+    transform: translateX(1rem); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
 
 @font-face {
   font-family: 'Proxima Nova Rg';
@@ -84,7 +104,8 @@ body {
   font-family: 'Montserrat';
   font-weight: 700;
   font-size: 5.5rem;
-  color: #fff; }
+  color: #fff;
+  animation: moveInLeft 1s ease-out; }
 
 .heading-secondary {
   display: grid;
@@ -92,7 +113,7 @@ body {
   grid-row-gap: 1.5rem;
   align-items: center;
   justify-items: center;
-  padding: 1.5rem 10rem; }
+  padding: 1rem 0; }
   .heading-secondary--main {
     display: grid;
     grid-template-rows: max-content max-content;
@@ -113,9 +134,14 @@ body {
     font-weight: 300;
     font-size: 1.6rem;
     display: block; }
+  .heading-secondary--green {
+    color: #207b20; }
 
 .mb-md {
   margin-bottom: 3.5rem; }
+
+.mb-lg {
+  margin-bottom: 5.5rem; }
 
 .btn, .btn:link, .btn:visited {
   text-decoration: none;
@@ -133,7 +159,8 @@ body {
   padding: .7rem 3.5rem;
   border-radius: 10rem;
   margin-bottom: 30rem;
-  transition: transform .2s; }
+  transition: transform .2s;
+  animation: moveInBottom 1s ease-out; }
   .btn--lg:hover, .btn--lg:focus {
     outline: none;
     transform: translateY(-0.2rem);
@@ -182,6 +209,32 @@ body {
   .btn--sm:active {
     transform: translateY(0.2rem); }
 
+.btn--view-more {
+  background-color: #2b9b2b;
+  padding: 1rem 3rem 1rem 1.8rem;
+  border-radius: 2.5rem;
+  font-family: 'Proxima Nova Rg';
+  font-weight: 400;
+  font-size: 1.8rem;
+  color: #fff;
+  position: relative; }
+  .btn--view-more:hover, .btn--view-more:focus {
+    outline: none;
+    transform: translateY(-0.2rem);
+    background-color: var(--color-dark-green); }
+  .btn--view-more:active {
+    transform: translateY(0.2rem); }
+  .btn--view-more::after {
+    content: "";
+    display: block;
+    position: absolute;
+    background-image: url(../img/shape-2.png);
+    background-repeat: no-repeat;
+    width: 1.3rem;
+    height: 1.4rem;
+    right: 1rem;
+    top: 2rem; }
+
 .features__list {
   list-style: none;
   display: grid;
@@ -194,17 +247,15 @@ body {
   grid-row-gap: 2rem;
   align-items: center;
   justify-items: center; }
-  .features__item::before {
-    content: "";
-    display: block;
-    width: 8.6rem;
-    height: 8.6rem; }
-  .features__item:nth-child(1)::before {
-    background: url(../img/Forma-1.png) no-repeat; }
-  .features__item:nth-child(2)::before {
-    background: url(../img/Forma-2.png) no-repeat; }
-  .features__item:nth-child(3)::before {
-    background: url(../img/Forma-3.png) no-repeat; }
+
+.features__image {
+  width: 14.4rem;
+  height: 14.4rem;
+  border-radius: 1rem;
+  background-color: #e1f3e1;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 .features__heading {
   font-family: 'Proxima Nova Rg';
@@ -218,10 +269,64 @@ body {
   padding: 0 3rem;
   text-align: center; }
 
+.portfolio__buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.portfolio__btn {
+  box-shadow: inset 1px 0 0 var(--color-dark-green);
+  border: none;
+  cursor: pointer;
+  padding: .7rem 1.5rem;
+  background-color: #fff;
+  color: var(--color-dark-green);
+  font-family: 'Proxima Nova Rg';
+  font-size: 1.6rem;
+  transition: all .2s; }
+  .portfolio__btn:hover, .portfolio__btn:focus, .portfolio__btn:active {
+    outline: none;
+    background-color: var(--color-dark-green);
+    color: #fff; }
+  .portfolio__btn--active {
+    background-color: var(--color-dark-green);
+    color: #fff;
+    border: none; }
+  .portfolio__btn--photo {
+    border-radius: 2rem 0 0 2rem; }
+  .portfolio__btn--print {
+    border-radius: 0 2rem 2rem 0; }
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 3rem; }
+  .gallery__wrapper {
+    grid-column: 3 / span 8;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 3rem; }
+  .gallery__item {
+    width: 16rem; }
+
 .container {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: repeat(9, 1fr); }
+  grid-template-rows: repeat(6, min-content); }
+
+.section-about {
+  grid-column: 2 / span 10;
+  padding: 2rem 0 6rem 0; }
+
+.portfolio {
+  grid-column: 1 / -1;
+  background-color: var(--color-primary);
+  padding: 2rem 0 6rem 0; }
+
+.btn-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 .header {
   grid-column: 1 / -1;
@@ -249,8 +354,9 @@ body {
     text-decoration: none;
     transition: all .2s;
     position: relative; }
-    .header__link:link:hover, .header__link:visited:hover {
-      font-weight: 700; }
+    .header__link:link:hover, .header__link:link:focus, .header__link:visited:hover, .header__link:visited:focus {
+      font-weight: 700;
+      outline: none; }
     .header__link:link::before, .header__link:visited::before {
       content: "";
       display: block;
@@ -261,9 +367,11 @@ body {
       background-color: var(--color-primary);
       transform: scaleX(0);
       transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s; }
-    .header__link:link:hover::before, .header__link:visited:hover::before {
+    .header__link:link:hover::before, .header__link:link:focus::before, .header__link:visited:hover::before, .header__link:visited:focus::before {
       width: 100%;
       transform: scaleX(1); }
+  .header__link--active {
+    font-weight: 700; }
   .header__content {
     display: flex;
     flex-direction: column;
@@ -304,6 +412,3 @@ body {
     height: 1.3rem;
     width: 1.4rem;
     fill: var(--color-dark); }
-
-.section-about {
-  grid-column: 2 / span 10; }
