--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,5 +1,7 @@
 :root {
     --color-primary: #54d154;
     --color-primary-hover: #48b148;
+    --color-dark-green: #207b20;
+    --color-grey: #828181;
     --color-dark: #1f1f1f;
 }
