--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -20,6 +20,7 @@
         border-radius: 10rem;
         margin-bottom: 30rem;
         transition: transform .2s;
+        animation: moveInBottom 1s ease-out;
 
         &:hover,
         &:focus {
@@ -85,4 +86,38 @@
             transform: translateY(.2rem);
         }
     }
+
+    &--view-more {
+        background-color: #2b9b2b;
+        padding: 1rem 3rem 1rem 1.8rem;
+        border-radius: 2.5rem;
+        font-family: 'Proxima Nova Rg';
+        @include font-weight(normal);
+        font-size: 1.8rem;
+        color: #fff;
+        position: relative;
+
+        &:hover,
+        &:focus {
+            outline: none;
+            transform: translateY(-.2rem);
+            background-color: var(--color-dark-green);
+        }
+
+        &:active {
+            transform: translateY(.2rem);
+        }
+
+        &::after {
+            @include pseudo;
+            background-image: url(../img/shape-2.png);
+            background-repeat: no-repeat;
+            width: 1.3rem;
+            height: 1.4rem;
+            right: 1rem;
+            top: 2rem;
+        }
+    }
 }
+
+
