--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,5 +1,22 @@
 .container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(9, 1fr);
+    grid-template-rows: repeat(6, min-content);
 }
+
+.section-about {
+    grid-column: 2 / span 10;
+    padding: 2rem 0 6rem 0;
+}
+
+.portfolio {
+    grid-column: 1 / -1;
+    background-color: var(--color-primary);
+    padding: 2rem 0 6rem 0;
+}
+
+.btn-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} 
