--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,10 +9,11 @@
 
 @import 'components/btn';
 @import 'components/features';
+@import 'components/portfolio';
+@import 'components/gallery';
 
 @import 'layout/grid';
 @import 'layout/header';
-@import 'layout/section-about';
 
 
 
