--- a/css/main.css
+++ b/css/main.css
@@ -235,6 +235,32 @@ body {
     right: 1rem;
     top: 2rem; }
 
+.btn--clients {
+  background-color: #dddcdc;
+  padding: .7rem 4rem .7rem 3rem;
+  border-radius: 2.5rem;
+  font-family: 'Proxima Nova Rg';
+  font-weight: 400;
+  font-size: 1.8rem;
+  color: #a59d9d;
+  position: relative; }
+  .btn--clients:hover, .btn--clients:focus {
+    outline: none;
+    transform: translateY(-0.2rem);
+    background-color: var(--color-grey); }
+  .btn--clients:active {
+    transform: translateY(0.2rem); }
+  .btn--clients::after {
+    content: "";
+    display: block;
+    position: absolute;
+    background-image: url(../img/shape-3.png);
+    background-repeat: no-repeat;
+    width: 1.3rem;
+    height: 1.4rem;
+    right: 1.8rem;
+    top: 1.7rem; }
+
 .features__list {
   list-style: none;
   display: grid;
@@ -309,6 +335,20 @@ body {
   .gallery__item {
     width: 16rem; }
 
+.clients-gallery {
+  display: grid;
+  grid-template-columns: repeat(14, 1fr); }
+  .clients-gallery__wrapper {
+    grid-column: 4 / span 8;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 5rem; }
+  .clients-gallery__item {
+    width: 16rem;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+
 .container {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -321,6 +361,11 @@ body {
 .portfolio {
   grid-column: 1 / -1;
   background-color: var(--color-primary);
+  padding: 2rem 0 6rem 0; }
+
+.clients {
+  grid-column: 1 / -1;
+  background-color: var(--color-grey-light);
   padding: 2rem 0 6rem 0; }
 
 .btn-wrapper {
