--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -15,6 +15,12 @@
     padding: 2rem 0 6rem 0;
 }
 
+.clients {
+    grid-column: 1 / -1;
+    background-color: var(--color-grey-light);
+    padding: 2rem 0 6rem 0;
+}
+
 .btn-wrapper {
     display: flex;
     justify-content: center;
