--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import 'components/features';
 @import 'components/portfolio';
 @import 'components/gallery';
+@import 'components/clients-gallery';
 
 @import 'layout/grid';
 @import 'layout/header';
