--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -3,5 +3,6 @@
     --color-primary-hover: #48b148;
     --color-dark-green: #207b20;
     --color-grey: #828181;
+    --color-grey-light: #f2f1f1;
     --color-dark: #1f1f1f;
 }
