--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import 'components/portfolio';
 @import 'components/gallery';
 @import 'components/clients-gallery';
+@import 'components/team';
 
 @import 'layout/grid';
 @import 'layout/header';
