--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -26,3 +26,9 @@
     justify-content: center;
     align-items: center;
 } 
+
+.team {
+    grid-column: 1 / -1;
+    background-color: var(--color-primary);
+    padding: 2rem 0 6rem 0;
+}
