Gallery hover effects

--- a/css/main.css
+++ b/css/main.css
@@ -332,6 +332,40 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
     grid-gap: 3rem; }
+  .gallery__item {
+    position: relative;
+    transition: all .2s ease-out; }
+  .gallery__item:hover .gallery__view {
+    opacity: 1;
+    animation: moveInBottom .2s; }
+  .gallery__item:hover .gallery__img {
+    transform: scale(1.1); }
+  .gallery__img {
+    height: 100%;
+    transform: scale(1);
+    transition: transform .5s; }
+  .gallery__content {
+    width: 16rem;
+    height: 16rem;
+    overflow: hidden; }
+  .gallery__view {
+    width: 16rem;
+    height: 16rem;
+    background-color: rgba(0, 0, 0, 0.4);
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0; }
+  .gallery__link {
+    color: #fff;
+    font-weight: 1rem;
+    font-family: 'Montserrat';
+    border: 1px solid #fff;
+    padding: .5rem 1rem;
+    text-decoration: none; }
 
 .clients-gallery {
   display: grid;
