--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -32,3 +32,9 @@
     background-color: var(--color-primary);
     padding: 2rem 0 6rem 0;
 }
+
+.footer {
+    grid-column: 1 / -1;
+    background-color: #333;
+    padding: 3rem;
+}
