--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,8 @@
 @import 'components/gallery';
 @import 'components/clients-gallery';
 @import 'components/team';
+@import 'components/icon';
+@import 'components/form';
 
 @import 'layout/grid';
 @import 'layout/header';
