--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,15 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
+  @media only screen and (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media only screen and (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media only screen and (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   font-family: 'Montserrat', serif;
@@ -107,6 +116,9 @@ body {
   font-size: 5.5rem;
   color: #fff;
   animation: moveInLeft 1s ease-out; }
+  @media only screen and (max-width: 56.25em) {
+    .heading-primary {
+      font-size: 4rem; } }
 
 .heading-secondary {
   display: grid;
@@ -114,7 +126,7 @@ body {
   grid-row-gap: 1.5rem;
   align-items: center;
   justify-items: center;
-  padding: 1rem 0; }
+  padding: 1rem 3rem; }
   .heading-secondary--main {
     display: grid;
     grid-template-rows: max-content max-content;
@@ -165,6 +177,9 @@ body {
   margin-bottom: 30rem;
   transition: transform .2s;
   animation: moveInBottom 1s ease-out; }
+  @media only screen and (max-width: 56.25em) {
+    .btn--lg {
+      margin-bottom: 10rem; } }
   .btn--lg:hover, .btn--lg:focus {
     outline: none;
     transform: translateY(-0.2rem);
@@ -181,6 +196,9 @@ body {
   position: relative;
   border-radius: 3rem;
   margin-bottom: 1rem; }
+  @media only screen and (max-width: 56.25em) {
+    .btn--grey {
+      margin-bottom: .5rem; } }
   .btn--grey:hover, .btn--grey:focus {
     outline: none;
     transform: translateY(-0.2rem);
@@ -196,7 +214,7 @@ body {
     width: 1.3rem;
     height: 1.4rem;
     right: 1rem;
-    top: 1rem; }
+    top: 1.4rem; }
 
 .btn--sm {
   background-color: var(--color-primary);
@@ -205,7 +223,8 @@ body {
   font-family: 'Proxima Nova Rg';
   font-weight: 700;
   font-size: 1.6rem;
-  color: #fff; }
+  color: #fff;
+  margin-bottom: 2rem; }
   .btn--sm:hover, .btn--sm:focus {
     outline: none;
     transform: translateY(-0.2rem);
@@ -383,6 +402,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center; }
+  .clients-gallery__img:hover {
+    opacity: .6; }
 
 .team__wrapper {
   display: grid;
@@ -407,16 +428,60 @@ body {
   color: #fff;
   font-size: 1.6rem; }
 
-.team__link:not(:last-child) {
-  margin-right: .5rem; }
+.team__photo-wrapper {
+  width: 12.4rem;
+  height: 12.4rem;
+  border-radius: 50%;
+  overflow: hidden; }
 
-.team__icons {
+.team__photo {
+  transform: scale(1.1);
+  transition: transform .5s; }
+  .team__photo:hover {
+    transform: scale(1); }
+
+.icon {
   background-color: var(--color-grey-light);
   padding: .5rem;
   border-radius: 2rem; }
+  .icon__icon {
+    margin-top: .3rem; }
+  .icon__link:not(:last-child) {
+    margin-right: .5rem; }
 
-.team__icon {
-  margin-top: .3rem; }
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 100%; }
+  .form__group:not(:last-child) {
+    margin-bottom: .2rem; }
+  .form__group:nth-child(1) {
+    border-radius: 3px 3px 0 0; }
+  .form__input {
+    font-size: 1.6rem;
+    font-family: 'Proxima Nova Rg';
+    color: #777;
+    padding: 1rem;
+    background-color: #444;
+    border: none;
+    transition: all .3s;
+    width: 100%; }
+    .form__input:focus {
+      outline: none;
+      color: #000;
+      background-color: var(--color-grey-light); }
+  .form__sent {
+    background-color: var(--color-primary);
+    border-radius: 0 0 3px 3px;
+    padding: 1rem 0;
+    border: none;
+    color: #fff;
+    font-family: 'Proxima Nova Rg';
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    cursor: pointer; }
+    .form__sent:hover {
+      background-color: var(--color-primary-hover); }
 
 .container {
   display: grid;
@@ -425,7 +490,7 @@ body {
 
 .section-about {
   grid-column: 2 / span 10;
-  padding: 2rem 0 6rem 0; }
+  padding: 2rem 3rem 6rem 3rem; }
 
 .portfolio {
   grid-column: 1 / -1;
@@ -463,6 +528,11 @@ body {
     display: flex;
     justify-content: space-between;
     margin-bottom: 25rem; }
+    @media only screen and (max-width: 56.25em) {
+      .header__nav {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center; } }
   .header__list {
     list-style: none;
     display: flex; }
@@ -478,6 +548,9 @@ body {
     text-decoration: none;
     transition: all .2s;
     position: relative; }
+    @media only screen and (max-width: 56.25em) {
+      .header__link:link, .header__link:visited {
+        margin-bottom: 3rem; } }
     .header__link:link:hover, .header__link:link:focus, .header__link:visited:hover, .header__link:visited:focus {
       font-weight: 700;
       outline: none; }
@@ -504,6 +577,9 @@ body {
 
 .logo {
   flex: 0 0 18%; }
+  @media only screen and (max-width: 56.25em) {
+    .logo {
+      margin-bottom: 3rem; } }
   .logo__link {
     text-decoration: none;
     color: #fff;
@@ -541,3 +617,74 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   grid-column-gap: 3rem; }
+
+.about-us {
+  display: grid;
+  grid-template-rows: repeat(3, max-content);
+  align-items: center;
+  justify-items: center;
+  grid-row-gap: 3rem; }
+  .about-us__description {
+    font-family: 'Proxima Nova Rg';
+    font-size: 1.6rem;
+    color: var(--color-grey-light);
+    text-align: center; }
+
+.posts {
+  display: grid;
+  grid-template-rows: repeat(2, max-content);
+  grid-row-gap: 3rem;
+  align-items: center;
+  justify-items: center; }
+  .posts__wrapper {
+    display: grid;
+    grid-template-rows: repeat(5, max-content);
+    grid-row-gap: 1rem; }
+  .posts__content {
+    display: flex;
+    flex-wrap: wrap; }
+  .posts__img {
+    width: 5.3rem;
+    height: 5.3rem;
+    margin-right: 1rem;
+    border-radius: 3px; }
+  .posts__heading-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; }
+    .posts__heading-wrapper > * {
+      text-decoration: none; }
+  .posts__heading {
+    font-family: 'Montserrat';
+    font-weight: 300;
+    font-size: 1.6rem;
+    color: var(--color-grey-light); }
+    .posts__heading--desc {
+      font-size: 1.3rem;
+      text-transform: uppercase;
+      flex: 1; }
+  .posts__link {
+    border-radius: 2px;
+    padding: .4rem; }
+    .posts__link--green {
+      background-color: var(--color-primary); }
+    .posts__link--orange {
+      background-color: #ffba00; }
+    .posts__link--blue {
+      background-color: #089dea; }
+    .posts__link--red {
+      background-color: #f34d04; }
+
+.contact {
+  display: grid;
+  grid-template-rows: repeat(3, max-content);
+  align-items: center;
+  justify-items: center;
+  grid-row-gap: 3rem; }
+  .contact__address {
+    width: 40%;
+    font-family: 'Proxima Nova Lt';
+    font-weight: 300;
+    font-size: 1.4rem;
+    color: var(--color-grey-light);
+    text-align: center; }
