--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -22,6 +22,10 @@
         transition: transform .2s;
         animation: moveInBottom 1s ease-out;
 
+        @include respond(tab-port) {
+            margin-bottom: 10rem;
+        }
+
         &:hover,
         &:focus {
             outline: none;
@@ -44,6 +48,10 @@
         border-radius: 3rem;
         margin-bottom: 1rem;
 
+        @include respond(tab-port) {
+            margin-bottom: .5rem;
+        }
+
         &:hover,
         &:focus {
             outline: none;
@@ -62,7 +70,7 @@
             width: 1.3rem;
             height: 1.4rem;
             right: 1rem;
-            top: 1rem;
+            top: 1.4rem;
         }
     }
 
@@ -74,6 +82,7 @@
         @include font-weight(bold);
         font-size: 1.6rem;
         color: #fff;
+        margin-bottom: 2rem;
 
         &:hover,
         &:focus {
