--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -27,19 +27,19 @@
         font-size: 1.6rem;
     }
 
-    &__link {
-        &:not(:last-child) {
-            margin-right: .5rem;
+    &__photo-wrapper {
+        width: 12.4rem;
+        height: 12.4rem;
+        border-radius: 50%;
+        overflow: hidden;
+    }
+
+    &__photo {
+        transform: scale(1.1);
+        transition: transform .5s;
+
+        &:hover {
+            transform: scale(1);
         }
-    }
-
-    &__icons {
-        background-color: var(--color-grey-light);
-        padding: .5rem;
-        border-radius: 2rem;
-    }
-
-    &__icon {
-        margin-top: .3rem;
     }
 }
