--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -6,7 +6,7 @@
 
 .section-about {
     grid-column: 2 / span 10;
-    padding: 2rem 0 6rem 0;
+    padding: 2rem 3rem 6rem 3rem;
 }
 
 .portfolio {
