--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,6 +10,12 @@
         display: flex;
         justify-content: space-between;
         margin-bottom: 25rem;
+
+        @include respond(tab-port) {
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
     }
 
     &__list {
@@ -34,6 +40,10 @@
         text-decoration: none;
         transition: all .2s;
         position: relative;
+
+        @include respond(tab-port) {
+            margin-bottom: 3rem;
+        }
 
         &:hover,
         &:focus {
@@ -74,6 +84,10 @@
 
 .logo {
     flex: 0 0 18%;
+
+    @include respond(tab-port) {
+        margin-bottom: 3rem;
+    }
 
     &__link {
         text-decoration: none;
